<resources>
    <string name="app_name">Travel Snap</string>
    <string name="rating_star">Rating Star</string>
    <string name="rating_5_0">5.0</string>
    <string name="title">Title</string>
    <string name="explore">Explore the world today</string>
    <string name="discover">Discover</string>
    <string name="line">-</string>
    <string name="take">take your travel to next level</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="reviews">100 Reviews</string>
    <string name="about">About</string>
    <string name="user_location">User Location</string>
    <string name="location">Location</string>
    <string name="publisher">Publisher</string>
    <string name="read_more"><u>Read More</u></string>
    <string name="read_less"><u>Read Less</u></string>
    <string name="fetch_images">Fetch Images</string>
    <string name="images">Images</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
</resources>