<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mcv_travel"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/circle"
            android:contentDescription="@string/back_arrow"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintEnd_toStartOf="@id/imv_rating"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_star"
            app:tint="@color/yellow"
            android:padding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_minus10sdp"
            app:layout_constraintEnd_toStartOf="@id/rating"
            app:layout_constraintTop_toTopOf="@id/title"
            android:contentDescription="@string/rating_star" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_5_0"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:singleLine="true"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>