<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/image_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@id/image_exit"
        app:layout_constraintEnd_toEndOf="@id/image_exit"
        app:layout_constraintTop_toBottomOf="@id/image_exit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/cancel"
            app:cornerRadius="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"/>

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/blue"
            android:text="@string/exit"
            app:cornerRadius="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"/>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>