<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        app:srcCompat="@drawable/image3"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/explore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explore"
        app:layout_constraintEnd_toStartOf="@id/dash"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/discover"
        app:layout_constraintTop_toTopOf="@id/discover"
        app:layout_constraintEnd_toStartOf="@id/take"
        app:layout_constraintBottom_toBottomOf="@id/discover"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/dash"
        app:layout_constraintTop_toTopOf="@id/discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/discover"/>



    <!--<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/travel_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toBottomOf="parent"/>-->

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/black"
        android:indeterminate="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travel_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>